--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -115,7 +115,7 @@ ul.wp-block-navigation__container  > li.wp-block-navigation-item{
   text-decoration: underline 2px;
   text-underline-offset: 4px;
   text-decoration-line: 2px;
-  text-decoration-color: #E80D38;
+  text-decoration-color: #b22944;b22944
   cursor: pointer;
 }
 .single.single-mieszkania a{
@@ -128,7 +128,7 @@ ul.wp-block-navigation__container  > li.wp-block-navigation-item{
 
 /* nav menu */
 .wp-block-navigation__container > li:nth-child(1):hover + .modal{
-background-color: #E80D38;
+background-color: #b22944;
 }
 .wp-block-navigation__container > li:nth-child(1):after {
   position: absolute;
@@ -143,7 +143,7 @@ background-color: #E80D38;
   width: 7px;
 }
 .tab-active{
-  border-bottom: #E80D38 2px solid;
+  border-bottom: #b22944 2px solid;
 }
 .sub-title a{
   color: white;
@@ -631,8 +631,8 @@ border-width: 0 2px 2px 0;
   content: none!important;
 }
 .menu-link::after{
-  border-left: 3px solid #E80D38!important;
-  border-bottom: 3px solid #E80D38!important;
+  border-left: 3px solid #b22944!important;
+  border-bottom: 3px solid #b22944!important;
 }
 .count{
   display: none!important;
