--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -115,7 +115,7 @@ ul.wp-block-navigation__container  > li.wp-block-navigation-item{
   text-decoration: underline 2px;
   text-underline-offset: 4px;
   text-decoration-line: 2px;
-  text-decoration-color: #b22944;b22944
+  text-decoration-color: #b22944;
   cursor: pointer;
 }
 .single.single-mieszkania a{
