--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -42,7 +42,7 @@
 				<!-- wp:paragraph -->
 				<span class="block text-[28px] text-center desktop:text-[36px] font-medium mb-[60px] desktop:mb-[40px]" data-aos="fade-right" data-aos-offset="30">Napisz!?</span>
 				<!-- /wp:paragraph -->
-
+				<!-- wp:group -->
 				<div class="wp-block-group cta2 container mx-auto px-[20px] deskto:px-0">
 					<div class="wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="dfa8bcf" title="Wpis - mieszkanie"]</div>
 				</div>
