--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -28,6 +28,7 @@
 				<!-- /wp:post-template -->
 			<!-- /wp:query -->
 
+			<!-- wp:contact-form-7/contact-form-selector {"hash":"dfa8bcf","title":"Wpis - mieszkanie"} -->
 			<!-- wp:group -->
 			<div class="wp-block-group cta2 py-[30px] w-full h-[780px] text-white relative">
 				<!-- wp:image -->
@@ -49,6 +50,7 @@
 				<!-- /wp:group -->
 			</div>
 			<!-- /wp:group -->
+			<!-- /wp:contact-form-7/contact-form-selector -->
 				
 
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
