--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -28,7 +28,6 @@
 				<!-- /wp:post-template -->
 			<!-- /wp:query -->
 
-			<!-- wp:contact-form-7/contact-form-selector {"hash":"dfa8bcf","title":"Wpis - mieszkanie"} -->
 			<!-- wp:group -->
 			<div class="wp-block-group cta2 py-[30px] w-full h-[780px] text-white relative">
 				<!-- wp:image -->
@@ -45,12 +44,13 @@
 				<!-- /wp:paragraph -->
 				<!-- wp:group -->
 				<div class="wp-block-group cta2 container mx-auto px-[20px] deskto:px-0">
+					<!-- wp:contact-form-7/contact-form-selector {"id":1917,"hash":"dfa8bcf","title":"Wpis - mieszkanie"} -->
 					<div class="wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="dfa8bcf" title="Wpis - mieszkanie"]</div>
+					<!-- /wp:contact-form-7/contact-form-selector -->
 				</div>
 				<!-- /wp:group -->
 			</div>
 			<!-- /wp:group -->
-			<!-- /wp:contact-form-7/contact-form-selector -->
 				
 
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
