--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -506,7 +506,7 @@ label{
     height: 120px;
     transition: height 0.3s ease-out;
     row-gap: 2px;
-    z-index: 3;
+    /* z-index: 0; */
     position: relative;
   }
 }
