--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -424,9 +424,9 @@ label{
   display: flex!important;
 }
 @media only screen and (max-width: 1024px) {
-  .ymc-smart-filter-container .filter-layout3 div:nth-child(6){
+  /* .ymc-smart-filter-container .filter-layout3 div:nth-child(6){
     display: none!important;
-  }
+  } */
 }
 .ymc-smart-filter-container .filter-layout3 div:nth-child(7) {
   grid-column: 1 / span 3;
