--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -428,8 +428,12 @@ label{
     display: none!important;
   } */
 }
+.ymc-smart-filter-container .filter-layout3 div:nth-child(6) {
+  grid-column: 2 / span 3;
+  grid-row: 5 / span 1;
+}
 .ymc-smart-filter-container .filter-layout3 div:nth-child(7) {
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 2;
   grid-row: 5 / span 1;
 }
 @media only screen and (max-width: 1024px) {
