--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -437,9 +437,13 @@ label{
   grid-row: 6 / span 1;
 }
 @media only screen and (max-width: 1024px) {
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(13) {
+    grid-column: 1 / span 4;
+    grid-row: 10 / span 1;
+  }
   .ymc-smart-filter-container .filter-layout3 div:nth-child(14) {
-    grid-column: 1 / span 3;
-    grid-row: 4 / span 1;
+    grid-column: 1 / span 4;
+    grid-row: 11 / span 1;
   }
 }
 .ymc-smart-filter-container .filter-layout3 div:nth-child(9),
