--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -437,9 +437,17 @@ label{
   grid-row: 6 / span 1;
 }
 @media only screen and (max-width: 1024px) {
-  .ymc-smart-filter-container .filter-layout3 div:nth-child(10) {
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(8) {
+    grid-column: 1 / span 4;
+    grid-row: 6 / span 1;
+  }
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(9) {
     grid-column: 1 / span 4;
     grid-row: 7 / span 1;
+  }
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(10) {
+    grid-column: 1 / span 4;
+    grid-row: 8 / span 1;
   }
   .ymc-smart-filter-container .filter-layout3 div:nth-child(11) {
     grid-column: 1 / span 4;
