--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -437,6 +437,10 @@ label{
   grid-row: 6 / span 1;
 }
 @media only screen and (max-width: 1024px) {
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(5) {
+    grid-column: 1 / span 4;
+    grid-row: 5 / span 1;
+  }
   .ymc-smart-filter-container .filter-layout3 div:nth-child(8) {
     grid-column: 1 / span 4;
     grid-row: 6 / span 1;
