--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -437,6 +437,22 @@ label{
   grid-row: 6 / span 1;
 }
 @media only screen and (max-width: 1024px) {
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(1) {
+    grid-column: 1 / span 4;
+    grid-row: 1 / span 1;
+  }
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(2) {
+    grid-column: 1 / span 4;
+    grid-row: 2 / span 1;
+  }
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(3) {
+    grid-column: 1 / span 4;
+    grid-row: 3 / span 1;
+  }
+  .ymc-smart-filter-container .filter-layout3 div:nth-child(4) {
+    grid-column: 1 / span 4;
+    grid-row: 4 / span 1;
+  }
   .ymc-smart-filter-container .filter-layout3 div:nth-child(5) {
     grid-column: 1 / span 4;
     grid-row: 5 / span 1;
