--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -582,6 +582,10 @@ label{
   /* margin-left: auto;
   margin-right: auto; */
 }
+.filter-layout3-filter-layout3{
+  background-color: white;
+  transition: height 0.3s ease;
+}
 .filter-layout3-148{
   padding-top: 10px;
 }
