--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -582,7 +582,7 @@ label{
   /* margin-left: auto;
   margin-right: auto; */
 }
-.filter-layout3-filter-layout3{
+#filter-layout3-filter-layout3{
   background-color: white;
   transition: height 0.3s ease;
 }
