--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -582,6 +582,9 @@ label{
   /* margin-left: auto;
   margin-right: auto; */
 }
+.filterContainer{
+  transition: all 0.3s ease;
+}
 #filter-layout3-filter-layout3{
   transition: height 0.3s ease;
 }
