--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -584,7 +584,15 @@ label{
 }
 .filterContainer{
   transition: all 0.3s ease;
+  height: auto;
 }
+@media only screen and (max-width: 1024px) {
+  .filterContainer{
+    transition: all 0.3s ease;
+    height: 720px;
+  }
+}
+
 #filter-layout3-filter-layout3{
   transition: height 0.3s ease;
 }
