--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -873,14 +873,14 @@ background-color: #e8fbff!important;
 @media only screen and (max-width: 480px) {
   .single-mieszkania .entry-content a{
     position: relative!important;
-    top: 230px;
-    right: -270px;
+    top: auto;
+    right: auto;
   
     background-color: #f5f7fa;
     color: inherit;
     font-weight: bold;
     text-align: center;
-    width: fit-content;
+    width: 100%;
     height: 55px;
     padding: 15px 20px;
     display: flex;
