--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -28,9 +28,9 @@
 				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post"},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true} -->
-					<div class="invest-tile max-w-full h-[370px] mb-[80px]">
+					<div class="blog-tile max-w-full h-fit mb-[80px]">
 						<!-- wp:group -->
-						<div class="relative group inline-block h-full desktop:max-w-full max-w-[310px]" data-aos="fade-right" data-aos-offset="30">
+						<div class="relative group inline-block h-full desktop:max-w-full max-w-[310px]" >
 							<!-- wp:group -->
 							<div class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]">
 								<!-- wp:group -->
