--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -30,7 +30,7 @@
 					<!-- wp:group {"isLink":true} -->
 					<div class="blog-tile max-w-full h-fit mb-[80px]">
 						<!-- wp:group -->
-						<div class="relative group inline-block h-full desktop:max-w-full max-w-[310px]" >
+						<div class="relative group inline-block h-full desktop:max-w-full max-w-full" >
 							<!-- wp:group -->
 							<div class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]">
 								<!-- wp:group -->
