--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -34,7 +34,7 @@
 							<!-- wp:group -->
 							<div class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]">
 								<!-- wp:group -->
-								<div class="wp-block-image desktop:w-[50%] h-full m-0">
+								<div class="wp-block-image desktop:w-[50%] h-full mb-[20px]">
 									<!-- wp:post-featured-image {"isLink":true} /-->
 								</div>
 								<!-- /wp:group -->
@@ -42,7 +42,7 @@
 								<!-- wp:group -->
 								<div class="wp-block-group content desktop:w-[50%] flex flex-col items-start justify-center">
 									<!-- wp:group -->
-									<div class="text-[24px] desktop:text-[36px] font-bold leading-[34px] desktop:leading-[46px]"><!-- wp:post-title {"isLink":true} /--></div>
+									<div class="mb-[20px] text-[24px] desktop:text-[36px] font-bold leading-[34px] desktop:leading-[46px]"><!-- wp:post-title {"isLink":true} /--></div>
 									<!-- /wp:group -->
 
 									<!-- wp:group -->
