--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -33,6 +33,17 @@ h2 {
   font-size: inherit;
   line-height: inherit;
 }
+.page-template-page-blog h2{
+  font-size: 34px;
+  line-height: 46px;
+}
+@media only screen and (max-width: 1024px) {
+  .page-template-page-blog h2{
+    font-size: 40px;
+    line-height: 54px;
+  }
+}
+
 h3 {
   font-size: 36px;
   line-height: 48px;
