--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -772,6 +772,10 @@ border-width: 0 2px 2px 0;
   padding: 12px 0px 12px 25px!important;
 }
 
+.container-posts.container-post-custom-layout img{
+  display: none;
+}
+
 /* YMC Flter Frontpage */
 .filter-custom-layout-1850-2 {
   background-color: #ebeef2
