--- a/templates/page-polityka-cookies.html
+++ b/templates/page-polityka-cookies.html
@@ -24,6 +24,21 @@
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
  			<!-- wp:pattern {"slug":"polityka-cookies"} /-->
 
+			 <!-- wp:paragraph -->
+			 Pliki cookie
+			 Aby zapewnić sprawne funkcjonowanie tego portalu, czasami umieszczamy na komputerze użytkownika (bądź innym urządzeniu) małe pliki – tzw. cookies („ciasteczka”). Podobnie postępuje większość dużych witryn internetowych.
+			 
+				
+			 
+			 Czym są pliki cookie?
+			 „Cookie” to mały plik tekstowy, który strona internetowa zapisuje na komputerze lub urządzeniu przenośnym internauty w chwili, gdy ten ją przegląda. Strona ta może w ten sposób zapamiętać na dłużej czynności i preferencje internauty (takie jak nazwa użytkownika, język, rozmiar czcionki i inne opcje). Dzięki temu użytkownik nie musi wpisywać tych samych informacji za każdym razem, gdy powróci na tę stronę lub przejdzie z jednej strony na inną.
+			 
+				
+			 
+			 Jak kontrolować pliki cookie?
+			 Pliki cookie można samodzielnie kontrolować i usuwać. Można usunąć wszystkie pliki cookie zamieszczone na swoim komputerze, a w większości przeglądarek wybrać ustawienie, które uniemożliwia instalowanie tych plików. W takim przypadku może się okazać konieczne dostosowanie niektórych preferencji przy każdej wizycie na danej stronie, a część opcji i usług może być niedostępna.			 
+			 <!-- /wp:paragraph -->
+
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
 		</div>
