--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -693,8 +693,14 @@ label{
 }
 
 .dropdown-filter.customPrice{
-  /* height: 120px; */
+  height: 120px;
   align-self: flex-start!important;
+}
+@media only screen and (max-width: 1024px) {
+  .dropdown-filter.customPrice{
+    height: 80px;
+    align-self: flex-start!important;
+  }
 }
 .dropdown-filter > .menu-active{
   border: none!important;
