--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -649,6 +649,7 @@ label{
 
 #filter-layout3-filter-layout3{
   transition: height 0.3s ease;
+  height: 490px;
 }
 .post-entry.post-custom-layout.post-custom-layout-148.post-custom-layout-148-2{
   background-color: white;
