--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -649,7 +649,13 @@ label{
 
 #filter-layout3-filter-layout3{
   transition: height 0.3s ease;
-  height: 480px;
+  height: auto;
+}
+@media only screen and (max-width: 1024px) {
+  #filter-layout3-filter-layout3{
+    transition: height 0.3s ease;
+    height: 530px;
+  }
 }
 .post-entry.post-custom-layout.post-custom-layout-148.post-custom-layout-148-2{
   background-color: white;
