--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -759,7 +759,7 @@ label{
     display: block;
     /* max-height: 180px; */
     max-height: 300px;
-    max-width: 100%;
+    max-width: 100%!important;
     overflow-y: scroll;
     box-shadow: 0 10px 40px 0 rgba(0,0,0,.1);
   }
