--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1227,6 +1227,20 @@ background-color: #e8fbff!important;
   overflow-y: scroll;;
   box-shadow: 0 10px 40px 0 rgba(0,0,0,.1);
 }
+@media only screen and (max-width: 1024px) {
+  .dropdown__list {
+    display: none;
+    position: absolute;
+    top: 90px;
+    list-style-type: none;
+    width: 100%;
+    height: 172px;
+    z-index: 4!important;
+    background-color: #fff;
+    overflow-y: scroll;;
+    box-shadow: 0 10px 40px 0 rgba(0,0,0,.1);
+  }
+}
 .dropdown__item {
   width: 100%;
   /* height: 100; */
