--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -845,6 +845,13 @@ border-width: 0 2px 2px 0;
   z-index: 1;
   position: relative;
 }
+@media only screen and (max-width: 1024px) {
+  .filter-custom-layout-1850.filter-custom-layout-1850-3{
+    background-color: #ebeef2;
+    z-index: 0;
+    position: relative;
+  }
+}
 
 /* filter layout ymc end */
 /* -------------------------------------------------------------------------------- */
