--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -841,6 +841,7 @@ border-width: 0 2px 2px 0;
   display: none;
 }
 .filter-custom-layout-1850.filter-custom-layout-1850-3{
+  height: 120px;
   background-color: #ebeef2;
   z-index: 1;
   position: relative;
