--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -845,6 +845,7 @@ border-width: 0 2px 2px 0;
   background-color: #ebeef2;
   z-index: 1;
   position: relative;
+  transition: all 0.3s ease;
 }
 @media only screen and (max-width: 1024px) {
   .filter-custom-layout-1850.filter-custom-layout-1850-3{
