--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -849,9 +849,11 @@ border-width: 0 2px 2px 0;
 }
 @media only screen and (max-width: 1024px) {
   .filter-custom-layout-1850.filter-custom-layout-1850-3{
+    height: auto;
     background-color: #ebeef2;
     z-index: 0;
     position: relative;
+    transition: all 0.3s ease;
   }
 }
 
