--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -728,7 +728,7 @@ label{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 15px!important;
+  /* padding: 10px 15px!important; */
   overflow-y: hidden;
 }
 @media only screen and (max-width: 1024px) {
@@ -737,7 +737,7 @@ label{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 22px 15px!important;
+    /* padding: 22px 15px!important; */
     overflow-y: hidden;
   }
 }
