--- a/templates/page-lista-mieszkan-osiedle-srebrniki.html
+++ b/templates/page-lista-mieszkan-osiedle-srebrniki.html
@@ -22,8 +22,8 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
-      <!-- wp:pattern {"slug":"lista-mieszkan-banner"} /-->
-      <!-- wp:pattern {"slug":"lista-mieszkan-content"} /-->
+      <!-- wp:pattern {"slug":"lista-mieszkan-osiedle-srebrniki-banner"} /-->
+      <!-- wp:pattern {"slug":"page-lista-mieszkan-osiedle-srebrniki-filtr"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
