--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -842,7 +842,14 @@ border-width: 0 2px 2px 0;
 .home .ymc-smart-filter-container {
   min-height: 120px;
 }
-.home #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout{
+.home #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-1711 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-1835 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-1926 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-1837 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-161 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout
+
+{
   display: none;
 }
 #ymc-smart-filter-container-3 > div.container-posts.container-post-custom-layout{
