--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -843,8 +843,8 @@ border-width: 0 2px 2px 0;
   min-height: 120px;
 }
 .home #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+/* osiedle srebrniki: */
 .page-id-1711 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
-.page-id-1714 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1835 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1837 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-161 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout
