--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -842,7 +842,7 @@ border-width: 0 2px 2px 0;
 .home .ymc-smart-filter-container {
   min-height: 120px;
 }
-.home #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-29 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 /* osiedle srebrniki: */
 .page-id-1711 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1835 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
@@ -852,9 +852,9 @@ border-width: 0 2px 2px 0;
 {
   display: none;
 }
-#ymc-smart-filter-container-3 > div.container-posts.container-post-custom-layout{
+/* #ymc-smart-filter-container-3 > div.container-posts.container-post-custom-layout{
   display: none;
-}
+} */
 .filter-custom-layout-1850.filter-custom-layout-1850-7{
   height: 120px;
   background-color: #ebeef2;
