--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -855,7 +855,8 @@ border-width: 0 2px 2px 0;
 /* #ymc-smart-filter-container-3 > div.container-posts.container-post-custom-layout{
   display: none;
 } */
-.filter-custom-layout-1850.filter-custom-layout-1850-7{
+.filter-custom-layout-1850.filter-custom-layout-1850-7,
+.filter-custom-layout-148.filter-custom-layout-148-3{
   height: 120px;
   background-color: #ebeef2;
   z-index: 1;
