--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -697,7 +697,7 @@ label{
 }
 .page-id-1926 .posts-found,
 .page-id-1926 .custom-posts-found{
-  display: hidden;
+  display: hidden!important;
 }
 .ymc-smart-filter-container .filter-layout3 .posts-found:empty {
   display: block!important;
