--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -699,7 +699,7 @@ label{
 .page-id-1926 .custom-posts-found
 .page-id-1932 .posts-found,
 .page-id-1932 .custom-posts-found{
-  display: none;
+  display: none!important;
 }
 .ymc-smart-filter-container .filter-layout3 .posts-found:empty {
   display: block!important;
