--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -439,7 +439,8 @@ label{
   display: none!important;
 }
 .filter-custom-layout-148-2,
-.filter-custom-layout-148-3 {
+.filter-custom-layout-148-3,
+.filter-custom-layout-148-4{
   background-color: #ebeef2!important;
 }
 .ymc-smart-filter-container .filter-layout3 div{
@@ -885,7 +886,8 @@ border-width: 0 2px 2px 0;
   position: relative;
   transition: all 0.3s ease;
 }
-.filter-custom-layout-148.filter-custom-layout-148-3{
+.filter-custom-layout-148.filter-custom-layout-148-3,
+.filter-custom-layout-148.filter-custom-layout-148-4{
   background-color: #ebeef2;
   z-index: 1;
   position: relative;
