--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -698,6 +698,8 @@ label{
 }
 .page-id-1926 .posts-found,
 .page-id-1926 .custom-posts-found,
+.page-id-1723 .posts-found,
+.page-id-1723 .custom-posts-found,
 .page-id-1932 .posts-found,
 .page-id-1932 .custom-posts-found{
   display: none;
