--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -869,12 +869,12 @@ border-width: 0 2px 2px 0;
 .page-id-1711 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1835 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1837 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
-.page-id-161 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout
+.page-id-161 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 /* sw piotra */
 .page-id-1714 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1714 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1821 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
-.page-id-1844 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout
+.page-id-1844 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 /* torunska 16 */
 .page-id-1723 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1725 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
