--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -704,11 +704,11 @@ label{
 .page-id-1934 .custom-posts-found,
 .page-id-1932 .posts-found,
 .page-id-1932 .custom-posts-found{
-  display: none!important;
+  display: none;
 }
-.ymc-smart-filter-container .filter-layout3 .posts-found:empty {
+/* .ymc-smart-filter-container .filter-layout3 .posts-found:empty {
   display: block;
-}
+} */
 .dropdown-filter{
   margin: 0;
   width: 100%;
