--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -895,6 +895,7 @@ border-width: 0 2px 2px 0;
   transition: all 0.3s ease;
 }
 .filter-custom-layout-148.filter-custom-layout-148-3,
+.filter-custom-layout-148.filter-custom-layout-148-5,
 .filter-custom-layout-148.filter-custom-layout-148-4{
   background-color: #ebeef2;
   z-index: 1;
