--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -40,7 +40,7 @@
 				<span class="block text-[28px] text-center desktop:text-[36px] font-medium" data-aos="fade-right" data-aos-offset="30">Chcesz dowiedzieć się więcej o tym mieszkaniu?</span>
 				<!-- /wp:paragraph -->
 				<!-- wp:paragraph -->
-				<span class="block text-[28px] text-center desktop:text-[36px] font-medium mb-[60px] desktop:mb-[40px]" data-aos="fade-right" data-aos-offset="30">Napisz!?</span>
+				<span class="block text-[28px] text-center desktop:text-[36px] font-medium mb-[60px] desktop:mb-[40px]" data-aos="fade-right" data-aos-offset="30">Napisz!</span>
 				<!-- /wp:paragraph -->
 
 				<!-- wp:group -->
