--- a/templates/archive-inwestycje-gdańsk.html
+++ b/templates/archive-inwestycje-gdańsk.html
@@ -22,7 +22,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
-			<!-- wp:pattern {"slug":"archive-inwestycje-gdansk"} /-->
+			<!-- wp:pattern {"slug":"archive-inwestycje-gdańsk"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
