--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -158,6 +158,7 @@ background-color: #b22944;
 }
 .tab-active{
   /* border-bottom: #b22944 2px solid; */
+  color: #2E384D;
   text-decoration: underline;
   text-decoration-color: #b22944;
   text-decoration-thickness: 2px;
