--- a/assets/editor.css
+++ b/assets/editor.css
@@ -36,3 +36,6 @@ filter-layout3-3 filter-layout3-3-filter-layout3
   opacity:1!important;
   transition: opacity 0.3s ease;
 }
+#block-b823e948-3245-4696-afbb-65e31175ce43{
+    padding-top: 120px!important;
+}
