--- a/assets/editor.css
+++ b/assets/editor.css
@@ -36,6 +36,6 @@ figure div{
   opacity:1!important;
   transition: opacity 0.3s ease;
 }
-#block-b823e948-3245-4696-afbb-65e31175ce43{
+.inwestycje .container > div{
     padding-top: 120px!important;
 }
