--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,6 +1,20 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-
+	<!-- wp:list -->
+	<ul>
+		<!-- wp:list-item -->
+		<li>
+			<script>
+				AOS.init({
+					offset: 40,
+					duration: 600,
+					once: true
+				});
+			</script>
+		</li>
+		<!-- /wp:list-item -->
+	</ul>
+	<!-- /wp:list -->
 
 	<!-- wp:template-part {"slug":"front-page/header"} /-->
 
