--- a/templates/archive-inwestycje-gdynia.html
+++ b/templates/archive-inwestycje-gdynia.html
@@ -16,6 +16,8 @@
 	</ul>
 	<!-- /wp:list -->
 
+	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
