--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -368,6 +368,7 @@ input::placeholder{
   font-size: 16px;
   margin-top: auto;
   margin-bottom: auto;
+  color: #2E384D;
 }
 .cta2 textarea,
 .cta2 #your-name,
