--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -371,6 +371,9 @@ input::placeholder{
   margin-bottom: auto;
   color: #8A8F99;
 }
+.wpcf7-response-output{
+  color:#b22944;
+}
 .cta2 textarea,
 .cta2 #your-name,
 .cta2 #your-phone{
@@ -412,31 +415,6 @@ label{
 .clearfix:before{
   display: none;
 }
-
-/* select option {
-  position: relative;
-  display: block;
-  padding: 0 22px 0 22px;
-  font-size: 18px;
-  font-weight: 300;
-  color: #3b3b3b;
-  line-height: 60px;
-  cursor: pointer;
-  transition: all 0.5s;
-} */
-/* option:hover {
-  cursor: pointer;
-  background-color: #B2F1FF;
-} */
-
-/* .left-col-map > div{
-  height: 1171px!important;
-}
-@media only screen and (max-width: 480px) {
-  .left-col-map > div{
-    height: 450px!important;
-  }
-} */
 
 /* --------------------------------------------------------------------------------------- */
 /* taxonomy filter YMC */
