--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -373,7 +373,7 @@ input::placeholder{
 }
 .wpcf7-response-output{
   color:#b22944;
-  border-color: white;
+  border-color: white!important;
 }
 .cta2 textarea,
 .cta2 #your-name,
