--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -374,6 +374,8 @@ input::placeholder{
 .wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output, .wpcf7 form.payment-required .wpcf7-response-output{
   color: white;
   border-color: white!important;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .cta2 textarea,
 .cta2 #your-name,
