--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -373,7 +373,7 @@ input::placeholder{
 }
 .wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output, .wpcf7 form.payment-required .wpcf7-response-output{
   color: white;
-  border-color: white!important;
+  border-color: red;
   padding-top: 15px;
   padding-bottom: 15px;
   text-align: center;
