--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -425,6 +425,11 @@ label{
 .clearfix:before{
   display: none;
 }
+@media only screen and (max-width: 800px) {
+.btn-newsletter{
+  width: 100%!important;
+}
+}
 
 /* --------------------------------------------------------------------------------------- */
 /* taxonomy filter YMC */
