--- a/templates/page-inwestycje-zrealizowane.html
+++ b/templates/page-inwestycje-zrealizowane.html
@@ -25,6 +25,22 @@
       <!-- wp:pattern {"slug":"not_page-inwestycje-zrealizowane"} /-->
 
 			<!-- wp:group -->
+			<div class="wp-block-group title-wrapper mb-[40px] bg-[#f6f7fa]">
+				<!-- wp:group -->
+				<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[20px] desktop:flex items-center">
+					<!-- wp:group -->
+					<div class="wp-block-group left-col desktop:w-[70%]">
+						<!-- wp:heading {"level":1} -->
+						<h1 class="container mx-auto desktop:px-0 px-[20px] my-[40px] text-[36px] desktop:text-[60px] text-[#2e384c] font-bold leading-[44px]">Inwestycje zrealizowane</h1>
+						<!-- /wp:heading -->
+					</div>
+					<!-- /wp:group -->
+				</div>
+				<!-- /wp:group -->
+			</div>
+			<!-- /wp:group -->
+
+			<!-- wp:group -->
 			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] [&>ul]:flex [&>ul]:flex-wrap [&>ul]:gap-[20px] [&>ul>li]:w-[370px]">
 				<!-- wp:query {"query":{"perPage":9,"pages":0,"offset":0,"postType":"inwest-zrealizowane"},"isLink":true} -->
 					<!-- wp:post-template -->
