--- a/templates/page-inwestycje-zrealizowane.html
+++ b/templates/page-inwestycje-zrealizowane.html
@@ -57,7 +57,7 @@
 								<!-- /wp:group -->
 
 								<!-- wp:group -->
-								<div class="wp-block-group mr-[20px] text-[24px] font-bold [&>h2>a]:text-[24px]"><!-- wp:post-title {"isLink":true} /--></div>
+								<div class="wp-block-group mr-[20px] text-[24px] font-bold [&>h2>a]:text-[24px]"><!-- wp:post-title {"isLink":true, "level":5} /--></div>
 								<!-- /wp:group -->
 
 								<!-- wp:paragraph -->
