--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -368,6 +368,9 @@ textarea{
 .page-template-page-contact .wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.payment-required .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output {
   color: #2E384D;
 }
+.page-template-page-contact .newsletter .wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.payment-required .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output {
+  color: white;
+}
 input::placeholder{
   font-size: 16px;
   margin-top: auto;
