--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -37,7 +37,7 @@
 				<div class="wp-block-group left-col-form p-[40px_20px] desktop:p-[90px_70px] desktop:w-1/2 bg-[#ebeef2]">
 					<!-- wp:contact-form-7/contact-form-selector {"id":65,"hash":"3358ba5","title":"test"} -->
 					<!-- wp:heading {"level":4} -->
-					<h4 class="wp-block-heading text-[30px] text-textGray mb-[30px] font-bold">Formularz kontaktowy</p></h4>
+					<h4 class="wp-block-heading text-[30px] text-textGray mb-[30px] font-bold">Formularz kontaktowy</h4>
 					<!-- /wp:heading -->
 					<div class="wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="3358ba5" title="test"]</div>
 					<!-- /wp:contact-form-7/contact-form-selector -->
