--- a/templates/page-dla-akcjoinariuszy.html
+++ b/templates/page-dla-akcjoinariuszy.html
@@ -22,7 +22,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
- 			<!-- wp:pattern {"slug":"dla-akcjoinariuszy"} /-->
+ 			<!-- wp:pattern {"slug":"dla-akcjonariuszy"} /-->
 
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
