--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -24,13 +24,13 @@
 		<div id="Page content" class="wp-block-group page-content-wrapper">
       <!-- wp:pattern {"slug":"page-blog-title"} /-->
 			<!-- wp:group -->
-			<div class="container mx-auto desktop:px-0 px-[20px]">
+			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px]">
 				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post"},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true} -->
-					<div class="blog-tile max-w-full h-fit mb-[80px]">
+					<div class="wp-block-group blog-tile max-w-full h-fit mb-[80px]">
 						<!-- wp:group -->
-						<div class="relative group inline-block h-full desktop:max-w-full max-w-full" >
+						<div class="wp-block-group relative group inline-block h-full desktop:max-w-full max-w-full" >
 							<!-- wp:group -->
 							<div class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]">
 								<!-- wp:group -->
@@ -42,7 +42,7 @@
 								<!-- wp:group -->
 								<div class="wp-block-group content desktop:w-[50%] flex flex-col items-start justify-center">
 									<!-- wp:group -->
-									<div class="mb-[20px] text-[24px] desktop:text-[36px] font-bold leading-[34px] desktop:leading-[46px]"><!-- wp:post-title {"isLink":true, "level":3} /--></div>
+									<div class="wp-block-group mb-[20px] text-[24px] desktop:text-[36px] font-bold leading-[34px] desktop:leading-[46px]"><!-- wp:post-title {"isLink":true, "level":3} /--></div>
 									<!-- /wp:group -->
 
 									<!-- wp:group -->
