--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -34,7 +34,7 @@
 							<!-- wp:group -->
 							<div class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]">
 								<!-- wp:group -->
-								<div class="wp-block-image desktop:w-[50%] h-full mb-[20px]">
+								<div class="wp-block-group desktop:w-[50%] h-full mb-[20px]">
 									<!-- wp:post-featured-image {"isLink":true} /-->
 								</div>
 								<!-- /wp:group -->
