--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -32,7 +32,7 @@
 			<div class="wp-block-group cta2 py-[30px] w-full h-fit text-white relative">
 				<!-- wp:image -->
 				<figure class="wp-block-image w-full h-full absolute top-0 left-0 z-[-1]">
-					<img src="https://pbgorski.webo.design/pl/wp-content/themes/pbgorski/assets/img/page-lista-mieszkan/cta2.jpeg" alt="cta2-img">
+					<img src="/wp-content/themes/pbgorski/assets/img/page-lista-mieszkan/cta2.jpeg" alt="cta2-img">
 				</figure>
 				<!-- /wp:image -->
 
