--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -44,7 +44,7 @@
 				<!-- /wp:paragraph -->
 
 				<!-- wp:group -->
-				<div class="wp-block-group cta2 container mx-auto px-[20px] deskto:px-0">
+				<div id="cta2" class="wp-block-group cta2 container mx-auto px-[20px] deskto:px-0">
 					<!-- wp:contact-form-7/contact-form-selector {"id":1917,"hash":"dfa8bcf","title":"Wpis - mieszkanie"} -->
 					
 					<!-- wp:group -->
