--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -25,6 +25,9 @@
 			<!-- wp:query {"query":{"inherit":true}} -->
 				<!-- wp:post-template -->
 				<!-- wp:pattern {"slug":"single-mieszkania"} /-->
+				       <!-- wp:shortcode -->
+							 [pdf_attachment file="1" name="optional file name"]
+							 <!-- /wp:shortcode -->
 				<!-- /wp:post-template -->
 			<!-- /wp:query -->
 
