--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -25,8 +25,16 @@
 			<!-- wp:query {"query":{"inherit":true}} -->
 				<!-- wp:post-template -->
 				<!-- wp:pattern {"slug":"single-mieszkania"} /-->
+				<!-- wp:shortcode -->
+				[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
+				<!-- /wp:shortcode -->
 				<!-- /wp:post-template -->
 			<!-- /wp:query -->
+
+
+			<!-- wp:shortcode -->
+			[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
+			<!-- /wp:shortcode -->
 
 			<!-- wp:group -->
 			<div class="wp-block-group cta2 py-[30px] w-full h-fit text-white relative">
