--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -56,7 +56,7 @@
 					<!-- wp:contact-form-7/contact-form-selector {"id":1917,"hash":"dfa8bcf","title":"Wpis - mieszkanie"} -->
 					
 					<!-- wp:group -->
-					<div class="wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="dfa8bcf" title="Wpis - mieszkanie"]</div>
+					<div class="wp-block-group wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="dfa8bcf" title="Wpis - mieszkanie"]</div>
 					<!-- /wp:contact-form-7/contact-form-selector -->
 					<!-- /wp:group -->
 				</div>
