--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -24,10 +24,14 @@
 		<div id="Page content" class="wp-block-group page-content-wrapper">      			
 			<!-- wp:query {"query":{"inherit":true}} -->
 				<!-- wp:post-template -->
+				<!-- wp:group -->
+				<div class="wp-block-group relative">				
 				<!-- wp:pattern {"slug":"single-mieszkania"} /-->
 				<!-- wp:shortcode -->
 				[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
 				<!-- /wp:shortcode -->
+				</div>
+				<!-- wp:group -->
 				<!-- /wp:post-template -->
 			<!-- /wp:query -->
 
