--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -25,13 +25,13 @@
 			<!-- wp:query {"query":{"inherit":true}} -->
 				<!-- wp:post-template -->
 				<!-- wp:group -->
-				<div class="wp-block-group relative">				
+				<div class="wp-block-group relative test">				
 				<!-- wp:pattern {"slug":"single-mieszkania"} /-->
 				<!-- wp:shortcode -->
 				[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
 				<!-- /wp:shortcode -->
 				</div>
-				<!-- wp:group -->
+				<!-- /wp:group -->
 				<!-- /wp:post-template -->
 			<!-- /wp:query -->
 
