--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -173,7 +173,7 @@
 								</div>
 								<!-- /wp:group -->
 								<!-- wp:paragraph -->
-								<p class="text-[18pxpx] mb-[20px] text-primaryRed"><a href="<?php echo home_url() . '/kredyty'; ?>"> Zapytaj o kredyt</a></p>
+								<p class="text-[18pxpx] mb-[20px] text-primaryRed"><a href="/kredyty"> Zapytaj o kredyt</a></p>
 								<!-- /wp:paragraph -->
 
 
